# Dagger

./: .gitignore  Dockerfile  airflow.sh  crear_iniciar_airflow_desde_compose.sh  docker-compose.build.yml  docker-compose.yaml  docker-compose.yml  entrypoint.sh  limpiar_todo.sh  readme.md  subirDAG.py  upload_script.py
.github/workflows/: build_push_ECR.yml  subir_dags.yml  upload_dags.yml
Airflow-API/: test-requests.sh
config/: airflow.cfg
dags/: api_request_simulation.py  cascada_data_aware_parallel.py  cascada_data_aware_parallel_dags copy.py  cascada_data_aware_parallel_dags.py  casdada_data_aware_DAGS.py  casdada_data_aware_dags.py  data_aware_example.py  data_aware_example_parallel.py  etl_with_pools_and_slots.py  step01_data_generation.py  step01_data_generation_AWS.py  step02_data_processing_AWS.md  step02_data_processing_with_lambda_and_branching.py  step03_data_consumption.py  step03_data_consumption_AWS.py  test-dag-3.py
deprecated/:  .dockerignore   Dockerfile  docker-compose.build.yml  docker-compose.yml  pyproject.toml  readme.md
single-image-version/: Dockerfile  entrypoint.sh
single-image-version/dags/: etl_with_pools_and_slots.py  step01_data_generation.py  step02_data_processing_with_lambda_and_branching.py
